styles/hydrogen.less
// The ui-variables file is provided by base themes provided by Atom.
//
// See https://github.com/atom/atom-dark-ui/blob/master/styles/ui-variables.less
// for a full listing of what's available.
@import "ui-variables";
@import "syntax-variables";

.hydrogen.output-bubble {
    @light-bubble-background: fadein(lighten(@syntax-background-color, 40%), 100%);
    @dark-bubble-background: fadein(lighten(@syntax-background-color, 10%), 100%);
    @bubble-background: contrast(@syntax-text-color, @dark-bubble-background, @light-bubble-background, 20%);
    @button-text-color: lighten(@syntax-text-color, 20%);
    color: lighten(@syntax-text-color, 10%);

    padding-left: 2px;
    padding-right: 2px;
    border-radius: 3px;
    white-space: pre;
    display: inline-block;

    &.rich {
        border: none;

        .bubble-output-container{
            max-height: 500px;
        }

        &.svg {
            background-color: white;
        }

        .rich-close-button {
            &::before {
                color: @button-text-color;
                background-color: @bubble-background;
                display: block;
                top: -12px;
                right: -12px;
                cursor: pointer;
                border-radius: 50%;
                width: 1.5em;
                height: 1.5em;
                line-height: 1.5em;
                text-align: center;
                box-shadow: 0 0 2px 0px rgba(0,0,0,0.5);
                margin: 0;
            }
        }
    }

    &:not(.multiline) {
        float: left;
        display: inline-flex;
        padding: 0;
        width: 100%;
        .bubble-output-container {
            padding: 0 2px 0 2px;
            pre {
                font-size: inherit;
                line-height: inherit;
                cursor: pointer;
            }
        }
    }

    &.multiline {
        padding-right: 0px;
        display: flex;
        margin: 0px !important;
    }

    &.multiline:not(.rich) {
        .bubble-action-panel {
            display: inline-flex;
        }

        .bubble-output-container {
            border-radius: 3px 0 0 3px;
            padding: 3px;
            padding-right: 7px;
            overflow: overlay;
        }

        .rich-close-button::before {
            display: none;
        }
    }

    .rich-close-button::before {
        display: none;
    }

    .bubble-output-container {
        color: lighten(@syntax-text-color, 10%);
        background-color: @bubble-background;
        box-shadow: 0 0 3px 0 rgba(0,0,0,0.3);
        // in order to be above the shadow of action-panel
        z-index: 0;
        border-radius: 3px;

        display: inline-block;
        max-height: 250px;
        max-width: 95%;
        overflow: scroll;
    }

    .bubble-result-container > * {
        width: fit-content !important;
        height: fit-content !important;
        max-width: unset !important;
        max-height: unset !important;
        overflow: hidden !important;
    }

    .bubble-result-container {
        width: inherit;
        height: inherit;
        pre {
            font-size: @font-size;
            font-family: inherit;

            color: lighten(@syntax-text-color, 10%);
            background-color: @bubble-background;

            margin: 0;
            padding: 0;
        }

        img, svg {
            background-color: white;
        }

        video, img, svg {
            display: block;
        }
    }

    .bubble-error-container {
        @error-base-color: average(@syntax-text-color, red);

        &.plain-error {
            pre {
                color: @error-base-color;
            }
        }

        pre {
            font-size: @font-size;
            font-family: inherit;

            color: lighten(@syntax-text-color, 10%);
            background-color: @bubble-background;

            margin: 0;
            padding: 0;
        }
    }

    .bubble-status-container::before {
        margin: 0px;
        font-size: 80%;
        width: 80%;
    }

    .bubble-action-panel {
        display: none;
        flex-direction: column;
        width: 30px;
        box-shadow: 0 0 3px 0 rgba(0,0,0,0.3);
        border-radius: 0 3px 3px 0;

        .action-button {
            @separator-color: fade(darken(@bubble-background, 20%), 20%);
            flex: none;

            border-top: 1px solid @separator-color;

            &:nth-child(1) {
                border-top: none;
                border-bottom: 1px solid @separator-color;
            }

            &::before {
                width: 100%;
                height: 30px;
                text-align: center;
                color: @button-text-color;
                cursor: pointer;
                text-align: center;
                margin: 0;
                line-height: 30px;
            }

        }

        .padding {
            flex: 1;
        }
    }

    .close-button {
        &::after {
            color: @button-text-color;
            background-color: @bubble-background;
            display: none;
            position: absolute;
            top: -12px;
            right: -12px;
            cursor: pointer;
            border-radius: 50%;
            padding: 1px;
            width: 1.5em;
            height: 1.5em;
            text-align: center;
            box-shadow: 0 0 2px 0px rgba(0,0,0,0.5);
        }
    }

}

.hydrogen.watch-sidebar {
    width: 300px;
    min-width: 200px;
    overflow-y: overlay;
    padding: 10px;
    border-left: 1px solid @base-border-color;

    .toolbar {
        .btn-group{
            float: right;
        }
    }

    .watch-view {
        width: 100%;
        .watch-input {
            margin-top: 10px;
            padding: 3px;
            border-radius: 3px;
            background-color: @syntax-background-color;
            font-size: @font-size;
            min-height: 3em;
            border: 1px solid @base-border-color;
        }

        .history-switch {
            padding: 3px 0 3px 0;
            position: relative;

            .counter {
                position: absolute;
                pointer-events: none;
                left: 50%;
                top: 50%;
                transform: translate(-50%, -50%);
            }
            .next-btn {
                float: right;
            }

            .scrollbar {
                overflow-x: scroll;
                overflow-y: hidden;
                margin-top: -@component-icon-size - @component-icon-padding + 1px;
                margin-left: @component-icon-size + @component-icon-padding + 2px;
                margin-right: @component-icon-size + @component-icon-padding + 2px;
                .hidden {
                    height: 1px;
                    width: 1000px;
                    visibility: hidden;
                    display: block !important;
                }
            }
            .hide {
                display: none;
            }
            .show {
                display: block;
            }
            ::-webkit-scrollbar {
                height: @component-icon-size + @component-icon-padding - 2px;
                -webkit-appearance: none;
            }
            ::-webkit-scrollbar-thumb {
                border-radius: @component-border-radius;
                border: 1px solid @button-border-color;
                background: @button-background-color;
            }
            ::-webkit-scrollbar-thumb:hover {
                background: @button-background-color-hover;
            }
        }

    }

    .watch-resize-handle {
        position: absolute;
        top: 0px;
        bottom: 0px;
        left: -5px;
        width: 10px;
        cursor: ew-resize;
    }

    .add-watch {
        width: 100%;
        margin-top: 10px;
    }

    .output-bubble.empty {
        display: none;
    }

    .output-bubble {
        @light-bubble-background: fadein(lighten(@syntax-background-color, 40%), 100%);
        @dark-bubble-background: fadein(lighten(@syntax-background-color, 10%), 100%);
        @bubble-background: contrast(@syntax-text-color, @dark-bubble-background, @light-bubble-background, 20%);
        position: static;
        display: flex;
        float: none;
        border-radius: 3px;
        margin: 0px;
        font-size: @font-size * 5/6;
        box-shadow: none;
        padding-left: 0px;
        padding-right: 0px;
        border: 1px solid @base-border-color;


        &.rich .rich-close-button {
            display: none;
        }

        &:not(.rich) {
            .bubble-action-panel {
                box-shadow: none;
                display: flex;
                flex-direction: column;
                width: 30px;
                background-color: darken(@bubble-background, 10%);
            }
        }

        .bubble-output-container {
            display: inline-block;
            width: 100%;
            max-height: 400px;
            overflow: scroll;
            white-space: pre-wrap;
        }


        .bubble-result-container {
            max-width: inherit;
            max-height: inherit;

            position: relative;
            pre {
                padding: 3px;
                font-size: inherit;
                display: block;
            }

            video, img, svg {
                display: block;
                max-width: 100% !important;
                max-height: 450px !important;
            }
        }

        .bubble-error-container {
            pre {
                font-size: inherit;
            }
        }
    }
}

.hydrogen.status-container {
    display: inline-block;
    cursor: pointer;
    vertical-align: top;

    .status:hover {
        text-decoration: underline;
    }
}

.hidden {
    display: none;
}

.hydrogen {
    .spinner {
        display:inline-block;
        text-align: center;
        line-height: 100%;
        position: relative;
        top: 1px;
    }

    .spinner > div {
        background-color: @text-color;
        height: 100%;
        width: 2px;
        display: inline-block;

        -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
        animation: stretchdelay 1.2s infinite ease-in-out;
    }

    .spinner .rect2 {
        -webkit-animation-delay: -1.1s;
        animation-delay: -1.1s;
        margin-left: 1px;
    }

    .spinner .rect3 {
        -webkit-animation-delay: -1.0s;
        animation-delay: -1.0s;
        margin-left: 1px;
    }

    .spinner .rect4 {
        -webkit-animation-delay: -0.9s;
        animation-delay: -0.9s;
        margin-left: 1px;
    }

    .spinner .rect5 {
        -webkit-animation-delay: -0.8s;
        animation-delay: -0.8s;
        margin-left: 1px;
    }

    @-webkit-keyframes stretchdelay {
        0%, 40%, 100% { -webkit-transform: scaleY(0.4) }
        20% { -webkit-transform: scaleY(1.0) }
    }

    @keyframes stretchdelay {
        0%, 40%, 100% {
            transform: scaleY(0.4);
            -webkit-transform: scaleY(0.4);
            }
        20% {
            transform: scaleY(1.0);
            -webkit-transform: scaleY(1.0);
        }
    }
}

.plain-message.inspect-message {
    white-space: pre-wrap;
    font-size: @font-size;
    span[style] {
        color: @text-color-info !important;
    }
}

.heading-summary.inspect-message {
    span[style] {
        color: @text-color-info !important;
    }
}

